--- a/style.css
+++ b/style.css
@@ -48,22 +48,30 @@ h1 {
 }
 .products {
   float: left;
-  margin-right: 10px;
+  margin-right: 50px;
+  margin-right: 50px;
+  margin-top: auto;
   position: relative;
   display: block;
+  
+  max-width: 100%;
+  height: auto;
 }
-.products li {
-  float: left;
-  margin-right: 10px;
-  position: relative;
-  display: block;
-}
-.products li a {
+
+/* .products  a {
   background-color: black;
   color: white;
   text-transform: uppercase;
   padding: 5px 5px 5px 5px;
+  width: 15%;
+} */
+ p {
+  background-color: grey;
+  color: white;
+  text-transform: uppercase;
+  padding: 5px 5px 5px 5px;
+  width: 100%;
 }
-.products li a {
-  background-color: gray;
-}
+
+
+
